--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                 <div class="card card-compact w-full bg-base-100 shadow-xl">
                     <figure><img class="w-full h-40" src="img/coffee.jpg" alt="coffee" /></figure>
                     <div class="card-body">
-                      <h2 class="card-title">coffee</h2>
+                      <h2 id="first-name" class="card-title">coffee JS</h2>
                       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, sequi!</p>
-                      <p>Price: $<span>119</span></p>
-                      <p>Quantity: <span>10</span></p>
+                      <p>Price: $<span id="first-price">110</span></p>
+                      <p>Quantity: <span id="first-quantity">5</span></p>
                       <div class="card-actions justify-end">
-                        <button class="btn btn-primary">Add to cart</button>
+                        <button id="first-card" class="btn btn-primary">Add to cart</button>
                       </div>
                     </div>
                   </div>
@@ -117,21 +117,22 @@
                     </div>
                   </div>
             </div>
-            <div class="card-details w-[25%] mx-auto">
+            <div class="cart-details w-full  md:w-[30%] lg:w-[25%] mx-auto">
                 <h1 class="text-3xl text-center font-bold mt-5">Total Products <span>0</span> </h1>
 
                 <div class="overflow-x-auto">
                     <table class="table w-full">
                       <!-- head -->
                       <thead>
-                        <tr>
+                        <tr> 
                           <th>No</th>
                           <th>Name</th>
                           <th>Price</th>
+                          <th>Quantity</th>
                           <th>Total</th>
                         </tr>
                       </thead>
-                      <tbody>
+                      <tbody id="table-container">
                         <!-- row 1 -->
                         <!-- <tr>
                           <th>1</th>
