2nd and 3rd card added

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                     <div class="card-body">
                       <h2 class="card-title">Heart JS</h2>
                       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, sequi!</p>
-                      <p>Price: $<span>120</span></p>
+                      <p>Price: $<span>200</span></p>
                       <p>Quantity: <span>10</span></p>
                       <div class="card-actions justify-end">
-                        <button class="btn btn-primary">Add to cart</button>
+                        <button id="second-card" class="btn btn-primary">Add to cart</button>
                       </div>
                     </div>
                   </div>
@@ -80,12 +80,12 @@
                 <div class="card card-compact w-full bg-base-100 shadow-xl">
                     <figure><img class="w-full h-40" src="img/panda.png" alt="coffee" /></figure>
                     <div class="card-body">
-                      <h2 class="card-title">Panda JS</h2>
+                      <h2 id="third-name" class="card-title">Panda JS</h2>
                       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, sequi!</p>
-                      <p>Price: $<span>119</span></p>
-                      <p>Quantity: <span>10</span></p>
+                      <p>Price: $<span id="third-price">119</span></p>
+                      <p>Quantity: <span id="third-quantity">10</span></p>
                       <div class="card-actions justify-end">
-                        <button class="btn btn-primary">Add to cart</button>
+                        <button id="third-card" class="btn btn-primary">Add to cart</button>
                       </div>
                     </div>
                   </div>
