--- a/index.html
+++ b/index.html
@@ -104,15 +104,15 @@
                 <div class="card card-compact w-full bg-base-100 shadow-xl">
                     <figure><img class="w-full h-40" src="img/vue-js.jpg" alt="umbrella" /></figure>
                     <div class="card-body">
-                      <h2 class="card-title">VUE JS</h2>
+                      <h2 id="last-title" class="card-title">VUE JS</h2>
                       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, sequi!</p>
                       <!-- <p>Price: $<span>119</span></p>
                       <p>Quantity: <span>10</span></p> -->
 
-                      <input type="text" placeholder="Price" class="input input-bordered input-md w-full max-w-xs" />
-                      <input type="text" placeholder="Quantity" class="input input-bordered input-md w-full max-w-xs" />
+                      <input id="price-input" type="text" placeholder="Price" class="input input-bordered input-md w-full max-w-xs" />
+                      <input id="quantity-input" type="text" placeholder="Quantity" class="input input-bordered input-md w-full max-w-xs" />
                       <div class="card-actions justify-end">
-                        <button class="btn btn-primary">Add to cart</button>
+                        <button id="last-card" class="btn btn-primary">Add to cart</button>
                       </div>
                     </div>
                   </div>
